# alfred

./: CMakeLists.txt  README.md
src/: alfred.cpp  myawss3.cpp  mymakefile
